Make the index page a little more interesting"

--- a/public/index.html
+++ b/public/index.html
@@ -213,25 +213,18 @@
         </div>
 
         <div id="getting-started">
-          <h1>Getting started</h1>
-          <h2>Here&rsquo;s how to get rolling:</h2>
+          <h1>Introduction</h1>
+          <h2>Here's a little bit about me</h2>
 
-          <ol>
-            <li>
-              <h2>Use <code>rails generate</code> to create your models and controllers</h2>
-              <p>To see all available options, run it without parameters.</p>
-            </li>
-
-            <li>
-              <h2>Set up a default route and remove <span class="filename">public/index.html</span></h2>
-              <p>Routes are set up in <span class="filename">config/routes.rb</span>.</p>
-            </li>
-
-            <li>
-              <h2>Create your database</h2>
-              <p>Run <code>rake db:create</code> to create your database. If you're not using SQLite (the default), edit <span class="filename">config/database.yml</span> with your username and password.</p>
-            </li>
-          </ol>
+          Hi. I'm ploughing my way through the Rails tutorial at the moment so you won't find anything too interesting here right now.  Wait a little bit though and you should find some of my old projects brought back to life!
+          <p>
+            If all goes well here's what I hope to bring you in the new year.
+          </p>
+          <p>
+            <ol>
+              <li>iTrack. A bug and issue tracking app.</li>
+            </ol>
+          </p>
         </div>
       </div>
 
