Add a temporary index to the pages we've created

--- a/public/index.html
+++ b/public/index.html
@@ -225,6 +225,14 @@
               <li>iTrack. A bug and issue tracking app.</li>
             </ol>
           </p>
+          <p>
+            These pages already exist
+            <ol>
+              <li><a href="/static_pages/home">home</a></li>
+              <li><a href="/static_pages/help">help</a></li>
+              <li><a href="/static_pages/about">about</a></li>
+            </ol>
+          </p>
         </div>
       </div>
 
