Change to PostgreSQL

--- a/public/index.html
+++ b/public/index.html
@@ -228,9 +228,10 @@
           <p>
             These pages already exist
             <ol>
-              <li><a href="/static_pages/home">home</a></li>
-              <li><a href="/static_pages/help">help</a></li>
-              <li><a href="/static_pages/about">about</a></li>
+              <li><a href="/static_pages/home">Home</a></li>
+              <li><a href="/static_pages/help">Help</a></li>
+              <li><a href="/static_pages/about">About</a></li>
+              <li><a href="/static_pages/about">Contact</a></li>
             </ol>
           </p>
         </div>
