Do some mucking about with Guard & Spork - waste of time

--- a/public/index.html
+++ b/public/index.html
@@ -234,6 +234,16 @@
               <li><a href="/static_pages/about">Contact</a></li>
             </ol>
           </p>
+          <h1>
+            Log
+          </h1>
+          <h2>
+            Progress so far .....
+          </h2>
+          <ol>
+            <li>26/11/13: Changed both Dev and Prod to use PostgreSQL</li>
+
+          </ol>
         </div>
       </div>
 
