Add a few notes to the index

--- a/public/index.html
+++ b/public/index.html
@@ -241,7 +241,9 @@
             Progress so far .....
           </h2>
           <ol>
-            <li>26/11/13: Changed both Dev and Prod to use PostgreSQL</li>
+            <li>26/11/13: Changed both Dev and Prod to use PostgreSQL then
+              wasted a load of time on Guard and Spork which turns out not
+              to work on Windows ... ho hum</li>
 
           </ol>
         </div>
