Added a full_title helper

--- a/public/index.html
+++ b/public/index.html
@@ -203,7 +203,7 @@
 
       <div id="content">
         <div id="header">
-          <h1>Welcome aboard Neil</h1>
+          <h1>Welcome aboard Neil's Dev Site</h1>
           <h2>You&rsquo;re riding Ruby on Rails!</h2>
         </div>
 
@@ -234,6 +234,7 @@
               <li><a href="/static_pages/about">Contact</a></li>
             </ol>
           </p>
+          <p>Follow me @ruuseukdee</p>
           <h1>
             Log
           </h1>
