Add Bootstrap and some custom CSS

--- a/public/index.html
+++ b/public/index.html
@@ -245,7 +245,7 @@
             <li>26/11/13: Changed both Dev and Prod to use PostgreSQL then
               wasted a load of time on Guard and Spork which turns out not
               to work on Windows ... ho hum</li>
-
+            <li>28/11/13: Added  Bootstrap and some custom CSS</li>  
           </ol>
         </div>
       </div>
