More changes the production.rb file

--- a/public/index.html
+++ b/public/index.html
@@ -203,8 +203,9 @@
 
       <div id="content">
         <div id="header">
-          <h1>Welcome aboard Neil's Dev Site</h1>
+          <h1>Neil's Dev Site</h1>
           <h2>You&rsquo;re riding Ruby on Rails!</h2>
+          <h3>Version 0.2</h3>
         </div>
 
         <div id="about">
